--- a/admin/edit_food_item.html
+++ b/admin/edit_food_item.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>Edit Food Item | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
+    <script src="../js/token_validate.js"></script>
     <script>
             var itemId = location.search.split('id=')[1];
         </script>
