--- a/admin/index.html
+++ b/admin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>Home | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
+    <script src="../js/token_validate.js"></script>
 </head>
 
 <body onload="getAllOrders()">
