--- a/admin/order_details.html
+++ b/admin/order_details.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>Order Details | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
+    <script src="../js/token_validate.js"></script>
     <script>
         var orderId = location.search.split('id=')[1];    
     </script>
