--- a/customer/edit_order.html
+++ b/customer/edit_order.html
@@ -6,6 +6,7 @@
     <title>Edit Order | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
     <script src="../js/scripts.js"></script>
+    <script src="../js/token_validate.js"></script>
     <script>
             var orderId = location.search.split('id=')[1];    
         </script>
