--- a/customer/index.html
+++ b/customer/index.html
@@ -6,6 +6,7 @@
     <title>Home | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
     <script src="../js/scripts.js"></script>
+    <script src="../js/token_validate.js"></script>
 </head>
 
 <body onload="getMenuItems()">
